--- a/main.css
+++ b/main.css
@@ -42,3 +42,11 @@ textarea {
   right: 16px;
   padding: 2px 6px;
 }
+
+.radio {
+  padding: 3px;
+  border-radius: 10px;
+  margin: 0 10px 10px 0;
+  width: 25px;
+  float: left;
+}
